mikec/tests/PASS/printing/76.mc
/* print int */

int main(){

    printf("%d ", 2);

}
