mikec/tests/FAIL/printing/26.mc
/*print ints*/
void main(int g){
int a;
int b;
printf("hi fuck you", a,b);
}

